[tool.poetry]
name = "mlflow_project"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]

[tool.poetry.dependencies]
python = ">= 3.10.12, < 3.11"

mlflow = ">=2.5.0, < 2.6.0" 
azure-storage-blob ="12.17.0"
psycopg2-binary = "2.9.7"
pylibyaml = "*" # "0.1.0"
pyyaml = "6.0.1"



[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
